welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:2: error: not found: value setCouleurBrosser
setCouleurBrosser(cou);
^