welcome.lessons.welcome.loopfor.LoopStairs.scala.code
var cou:Color = Color.magenta ; 
setCouleurBrosser(cou);
baisseBrosse();
avance();